@@ -1,11 +1,14 @@
-CHANGES-IPPTOOL.txt - 2013-05-02
+CHANGES-IPPTOOL.txt - 2013-05-29
 --------------------------------
 
 This file provides a list of changes to the ipptool binary distribution posted
 on cups.org.
 
-2013-05-02
+2013-05-29
 
+	- Added support for automatically extending the timeout when all of the
+	  request data has not yet been written (all platforms but Windows
+	  which does not support it...)
 	- Fixed several ipptool test files that used old STATUS names.
 
 
