@@ -3,6 +3,8 @@ CHANGES.txt - 1.7b1 - 2013-05-13
 
 CHANGES IN CUPS V1.7b2
 
+	- The ipptool program now automatically extends timeouts when the
+	  output buffer is filled (<rdar://problem/14016099>)
 	- The ipptool program now supports the --help and --version options.
 	- The ipptool program did not continue past include file errors by
 	  default (<rdar://problem/13875803>)
